[package]
name = "lessons"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = {version = "0.11.14", features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
scraper = "0.14.0"
